New changes, mirza

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <p class="mb-5 fs-5 text-white">Subscribing to JS Games Premium will give you and everyone playing with you the following features:</p>
     
         <!-- Cards Row -->
-        <div class="card-container test w-100">
+        <div class="card-container w-100">
     
           <!-- Card -->
           <div class="">
