--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     
     <section id="experts" class="experts">
       <h1 class="text-accent">🎮 Gamer Hall of Fame 👑</h1>
-      <p>⚡ Not All Heroes Wear Capes. Some Game Their Way to Glory 🎮🏆</p>
+      <p class="experts-tagline">⚡ Not All Heroes Wear Capes. Some Game Their Way to Glory 🎮🏆</p>
    <div class="expert-card-container">
     <div class="card expert-card">
       <img class="expert-img" src="assets/images/experts/karan.jpg" alt="">
@@ -400,8 +400,8 @@
       </div>
   
       <div class="card expert-card">
-        <img class="expert-img" src="assets/images/experts/navin.jpg" alt="">
-     <h6>Navin Rathod</h4>
+        <img class="expert-img" src="assets/images/experts/navin-crop.jpg" alt="">
+     <h6>Navin Meghval </h4>
             <p>🎮 Gaming is Life. Full-Time Mode: ON 🔥</p>
         </div>
   
@@ -413,13 +413,13 @@
           </div>
   
           <div class="card expert-card">
-            <img class="expert-img" src="assets/images/experts/zaid.jpg" alt="">
+            <img class="expert-img" src="assets/images/experts/zaid-crop.jpg" alt="">
          <h6>Zaid Shaikh</h4>
                 <p>Arcade Legend in Action 👾🚀🔥</p>
             </div>
   
             <div class="card expert-card">
-              <img class="expert-img" src="assets/images/experts/harsh.jpg" alt="">
+              <img class="expert-img" src="assets/images/experts/harsh-crop.jpg" alt="">
            <h6>Harsh Sharma</h4>
                   <p>Classic Console Crusher 🎮📻🚀</p>
               </div>
